--- a/clef-spring-boot-sample/src/main/resources/templates/secret.html
+++ b/clef-spring-boot-sample/src/main/resources/templates/secret.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorator="layout">
+<html
+        xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+        layout:decorator="layout">
     <head>
         <title>Secret</title>
     </head>
